syntax = "proto3";
package pb;

import "google/protobuf/timestamp.proto";

service Chat {
    rpc Send(SendChatRequest) returns (SendChatResponse);
    rpc Get(GetChatRequest) returns (GetChatResponse);
}

message SendChatRequest {
    uint64 from = 1;
    uint64 to = 2;
    string message = 3;
}

message SendChatResponse {}

message GetChatRequest {
    uint64 user1 = 1;
    uint64 user2 = 2;
    uint64 total = 3;
    uint64 skip = 4;
}

message GetChatResponse {
    repeated ChatMessage messages = 1;
}

message ChatMessage {
    uint64 from = 1;
    uint64 to = 2;
    string message = 3;
    google.protobuf.Timestamp time = 4;
}